# fetchfox-sdk-python

./: .gitignore  404.html  NOTES.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  setup.cfg
api/: index.html
concepts/: index.html
docs/: api.md  concepts.md  index.md  more_examples.md  quickstart.md
documentation/: README.md  single-page-doc.md
documentation/fetchfox_sdk/: index.html  workflow.html
documentation/html/: client.html
documentation/html/fetchfox_sdk/: client.html  index.html  workflow.html
examples/: 1.py  1_extract.py  1_extract_with_prompt.py  2.py  2_extract_with_template.py  2_find_urls.py  3_find_urls.py  3_simple_workflows.py  3_workflow.py  4_workflow.py  4_workflows_are_lazy_and_composable.py  5_concurrency.py  5_workflows_are_lazy_and_composable.py  6_callbacks_for_each_new_item.py  6_concurrency.py
examples/quickstart/: quickstart1.py  quickstart2.5.py  quickstart2.py  quickstart2_paginate.py  quickstart3.py  quickstart4.py  quickstart5.py
more_examples/: index.html
quickstart/: index.html
search/: search_index.json
src/fetchfox_sdk/: __init__.py  client.py  example.py  mcp_server.py  workflow.py
src/mcp/: server.py
tests/: test_fetchfox_sdk.py  test_workflow.py
tests/functional/: test_user_flows.py
