[metadata]
name = fetchfox-sdk
version = 0.0.5
author = Thomas Ferrell
author_email = thomas@fetchfoxai.com
description = Python SDK for the FetchFox API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fetchfox/fetchfox-sdk-python
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
#   License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.0
install_requires =
    requests>=2.22.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest >= 8.3.4
    responses >= 0.25.6
